Closed
Bug 1089005
Opened 11 years ago
Closed 10 years ago
Caret position is not changed by mouse click in input field when form-history autoComplete doropdown has been shown
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
RESOLVED
FIXED
mozilla37
People
(Reporter: alice0775, Assigned: enndeakin)
References
(Depends on 1 open bug)
Details
(Keywords: regression, ux-control, Whiteboard: [parity-Chrome][parity-IE])
Attachments
(2 files, 3 obsolete files)
|
622 bytes,
text/html
|
Details | |
|
12.38 KB,
patch
|
dao
:
review+
|
Details | Diff | Splinter Review |
This is annoying bug.
Steps To Reproduce:
1. Focus input fields (which is enabled form-history autocomplete)
2. Type text so that form-history autocomplete suggestion pops up
3. Attempt change the caret position by clicking on the input field
Actual Results:
The caret position is not changed. You need click once more.
Expected Results:
The caret position should be changed where you clicked.
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/7e6cb031ed8f
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131104081507
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/07ea7b11adef
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131104082308
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=7e6cb031ed8f&tochange=07ea7b11adef
Suspect:
07ea7b11adef Neil Deakin — Bug 596723, Don't consume clicks outside of arrow panels by default, always consume the clicks on anchors of all popups, r=dao,neil
| Reporter | ||
Updated•11 years ago
|
Flags: needinfo?(enndeakin)
| Reporter | ||
Updated•11 years ago
|
Component: Layout: Form Controls → Event Handling
| Reporter | ||
Comment 1•11 years ago
|
||
Also, there is a similar problem in HTML5 datalist dropdown.
| Reporter | ||
Updated•11 years ago
|
Keywords: ux-control
Whiteboard: [parity-Chrome][parity-IE]
Updated•11 years ago
|
Flags: firefox-backlog?
Comment 2•11 years ago
|
||
Not taking this into the Firefox Desktop backlog because we probably need to fix the widget itself or its event handling here.
Flags: firefox-backlog? → firefox-backlog-
Comment 3•11 years ago
|
||
I think it may require a change in the popup code to handle autocomplete popups which would be in scope for someone like Neil.
Comment 4•11 years ago
|
||
Hmmm ok, let's leave that to Neil then. I think he is a good person to decide whether we should put it in the backlog.
| Assignee | ||
Comment 5•11 years ago
|
||
This patch changes the consume flag to have three states, 'don't consume', 'always consume' and 'consume on parent only'.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Flags: needinfo?(enndeakin)
| Assignee | ||
Comment 6•11 years ago
|
||
Attachment #8531724 -
Attachment is obsolete: true
Attachment #8535698 -
Flags: review?(neil)
| Assignee | ||
Comment 7•10 years ago
|
||
This version is the same except also removes the manual manipulation of consumeoutsideclicks from autocomplete.xml which I don't think is needed any more. This fixes some issues with things working only some of the time.
Attachment #8535698 -
Attachment is obsolete: true
Attachment #8535698 -
Flags: review?(neil)
| Assignee | ||
Updated•10 years ago
|
Iteration: --- → 37.3 - 12 Jan
Points: --- → 3
| Assignee | ||
Comment 8•10 years ago
|
||
This fixes a bug in the searchbar as it has its own content.
| Assignee | ||
Updated•10 years ago
|
Attachment #8543980 -
Attachment is obsolete: true
| Assignee | ||
Comment 9•10 years ago
|
||
Comment on attachment 8544000 [details] [diff] [review]
Allow consume to be one of three states, v2.1
Maybe Dao can review this.
Attachment #8544000 -
Flags: review?(dao)
Comment 10•10 years ago
|
||
Comment on attachment 8544000 [details] [diff] [review]
Allow consume to be one of three states, v2.1
>- consume = item->Frame()->ConsumeOutsideClicks();
>+ ConsumeOutsideClicksResult consumeResult = item->Frame()->ConsumeOutsideClicks();
>+ consume = (consumeResult == ConsumeOutsideClicks_True);
>+
> // If the click was over the anchor, always consume the click. This way,
> // clicking on a menu doesn't reopen the menu.
>- if (!consume && pos) {
>+ if (consumeResult == ConsumeOutsideClicks_ParentOnly && pos) {
> nsCOMPtr<nsIContent> anchor = item->Frame()->GetAnchor();
That comment doesn't seem quite accurate anymore
Attachment #8544000 -
Flags: review?(dao) → review+
Comment 11•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Updated•10 years ago
|
Iteration: 37.3 - 12 Jan → ---
Points: 3 → ---
Updated•10 years ago
|
QA Whiteboard: [good first verify]
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•